buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        classpath 'org.robolectric:robolectric-gradle-plugin:0.13.+'
    }
}
apply plugin: 'com.android.library'
apply plugin: 'robolectric'

android {
    compileSdkVersion 17
    buildToolsVersion "21.1.1"

    defaultConfig {
        applicationId "com.openpeer.sdk"
        minSdkVersion 14
        targetSdkVersion 17

        // TODO: Try and find a way to automate testBuildType to reflect the selected build variant. No support at this time.
        testBuildType "debug"

        // for robolectric
        testApplicationId "com.openpeer.sdk.test"
    }

    sourceSets {
        main {
            manifest.srcFile 'AndroidManifest.xml'
            java.srcDirs = ['src', '../libs/op/libs/ortc-lib/libs/webrtc/webrtc/modules/video_capture/android/java/src', '../libs/op/libs/ortc-lib/libs/webrtc/webrtc/modules/video_render/android/java/src', '../libs/op/libs/ortc-lib/libs/webrtc/webrtc/modules/audio_device/android/java/src']
            resources.srcDirs = ['src']
            aidl.srcDirs = ['src']
            renderscript.srcDirs = ['src']
            res.srcDirs = ['res']
            assets.srcDirs = ['assets']
            jniLibs.srcDir 'libs'
        }

        androidTest.setRoot('test')
    }

    lintOptions {
        abortOnError false
    }

    buildTypes {
        release {
            runProguard false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_7
        targetCompatibility JavaVersion.VERSION_1_7
    }
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
//    compile fileTree(dir: 'jniLibs', include: ['*.so'])

    testCompile 'junit:junit:4.10'
    testCompile "org.mockito:mockito-core:1.+"

    androidTestCompile('org.robolectric:robolectric:2.4') {
        exclude module: 'classworlds'
        exclude module: 'commons-logging'
        exclude module: 'httpclient'
        exclude module: 'maven-artifact'
        exclude module: 'maven-artifact-manager'
        exclude module: 'maven-error-diagnostics'
        exclude module: 'maven-model'
        exclude module: 'maven-project'
        exclude module: 'maven-settings'
        exclude module: 'plexus-container-default'
        exclude module: 'plexus-interpolation'
        exclude module: 'plexus-utils'
        exclude module: 'wagon-file'
        exclude module: 'wagon-http-lightweight'
        exclude module: 'wagon-provider-api'
    }
    androidTestCompile 'com.squareup:fest-android:1.0.+'
}

robolectric {
    // configure the set of classes for JUnit tests
    include '**/*Test.class'
    exclude '**/espresso/**/*.class'

    // configure max heap size of the test JVM
    maxHeapSize = '2048m'

    // configure the test JVM arguments
    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'

    // Specify max number of processes (default is 1)
//    maxParallelForks = 4

    // Specify max number of test classes to execute in a test process
    // before restarting the process (default is unlimited)
//    forkEvery = 150

    // configure whether failing tests should fail the build
    ignoreFailures true

    // use afterTest to listen to the test execution results
    afterTest { descriptor, result ->
        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
    }
}
